assets/style.css
:root {
    --primary-color: #545e75;
    --secondary-color: #304d6d;
    --tertiary-color: #82a0bc;
    --quarternary-color: #a7cced;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
body {
    font-family: Helvetica, Arial, sans-serif;
    color: var(--secondary-color);
    overflow: auto;
}
.section-title {
    border-right: 3px solid var(--secondary-color);
    padding: 10px;
    width: 15%;
    margin: 30px;
    text-align: right;
    font-size: 1.55vw;  
}
.flex-row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 150px;
}
/* Header style start */
header {
    padding: 20px 35px;
    background-color: var(--primary-color);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
header h1 {
    background-color: var(--tertiary-color);
    color: var(--primary-color);
}
header a {
    text-decoration: none;
    color: var(--tertiary-color);
}
header nav {
    margin: 7px;
}
header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}
header nav ul li a {
    padding: 10px 15px;
    font-size: 1.25vw;
}
/* End of header style */
/*Title style start */
/*about me style start */
.about-me {
    align-items: center;
}
.about-me p {
    padding: 5px;
    flex: 1 10;
    font-size: .7vw;
}
/*about me style end*/
/*work style start */
img {
    min-height: 0;
    min-width: 0;
    opacity: 80%;
}
img:hover {
    opacity: 1;
}
.contact-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    flex: 1 10;
    align-items: center;
    font-size: 0.7vw;
    padding: 20px;
}
.portfolio-images {
    width: 80%;
    margin: 0;
    min-width: 0;
    padding-top: 25px;
    padding-bottom: 30px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: flex-start;
    position: relative;
}
.portfolio-images img {
    width: 100%;
}
.image {
    width: 49%;
    display: flex;
    margin: 1px;
    position: relative;
    border: 3px solid var(--primary-color);
}
.image:first-child {
    width: 100%;
    display: flex;

}
.project-title {
    position: absolute;
    bottom: 25px;
    color: black;
    font-size: 1.5vw;
    line-height: 1.1;
    background-color: var(--quarternary-color);
    z-index: 100;
    border: 3px solid var(--primary-color);
}

